# sensei

./: .gitignore  .vercelignore  Makefile  README.md  cluster.yaml  docker-compose.yaml
backend/: .buildpacks.env  .dockerignore  .env.development.example  .env.production.example  Dockerfile  Procfile  pyproject.toml  requirements.txt
backend/sensei_search/: base_agent.py  chat_store.py  config.py  env.py  logger.py  models.py  prompts.py  server.py  utils.py
backend/sensei_search/agents/: __init__.py  samurai_agent.py
backend/sensei_search/agents/samurai/: agent.py
backend/sensei_search/agents/shogun/: __init__.py  agent.py  agent_v1.py  agent_v2.py  prompts.py
backend/sensei_search/tools/: __init__.py  searxng.py
backend/sensei_search/tools/search/: __init__.py  base.py  bing.py  searxng.py
frontend/: .buildpacks.env  .dockerignore  .env.development  .env.production  Dockerfile  Procfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: ChatThreadStore.ts  context.ts  globals.css  layout.tsx  page.tsx  providers.tsx  types.tsx  user.ts
frontend/app/components/: ChatHistory.tsx  Citation.tsx  ClientToasts.tsx  CopyButton.tsx  DarkModeToggle.tsx  MainLayout.tsx  Navbar.tsx  RichContentRenderer.tsx  SearchArea.tsx  SearchInput.tsx  SearchInputBig.tsx  Sidebar.tsx  Toast.tsx
frontend/app/hooks/: use-toast.tsx
frontend/app/search/: layout.tsx  page.tsx  types.tsx
ops/: .gitignore
ops/k8s/: deploy.sh  deploy_searxng.py  requirements.txt
ops/k8s/searxng/: configmap.yaml.j2  redis.yaml.j2  (+1 more)
ops/searxng/: settings.yml
(+9 files in other folders)
